--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,7 +15,7 @@ ADD . /app
 WORKDIR /app
 
 # install required libraries
-RUN pip3 install -r requirements.txt
+RUN pip3 install -r flask scikit-learn[alldeps]
 
 # This is the runtime command for the container
 CMD python3 app.py
