--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# OrbitDB
+/orbitdb
+
 # compiled output
 /dist
 /tmp
@@ -7,6 +10,7 @@
 
 # dependencies
 /node_modules
+package-lock.json
 
 # IDEs and editors
 .idea
