Add dependencies to dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -15,7 +15,7 @@ ADD . /app
 WORKDIR /app
 
 # install required libraries
-RUN pip3 install -r flask scikit-learn[alldeps]
+RUN pip3 install -r flask scikit-learn[alldeps] numpy pandas matplotlib
 RUN npm install
 
 # This is the runtime command for the container
