--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,11 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 RUN apt-get update \
     && apt-get install -yq --no-install-recommends \
     python3 \
-    python3-pip
+    python3-pip \
+    nodejs \
+    npm
 RUN pip3 install --upgrade pip==9.0.3 \
     && pip3 install setuptools
 
@@ -15,7 +17,7 @@ ADD . /app
 WORKDIR /app
 
 # install required libraries
-RUN pip3 install flask scikit-learn[alldeps] numpy pandas matplotlib
+RUN pip3 install pandas matplotlib flask scikit-learn[alldeps]
 RUN npm install
 
 # This is the runtime command for the container
