--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -17,7 +17,7 @@ ADD . /app
 WORKDIR /app
 
 # install required libraries
-RUN pip3 install pandas matplotlib flask scikit-learn[alldeps]
+RUN pip3 install -r requirements.txt
 RUN npm install
 
 # This is the runtime command for the container
