--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
     "author": "Outlier Ventures, Daniel Elsner",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --proxy-config proxy.conf.json",
+        "start": "ng serve --host 0.0.0.0 --port 4200 --ng--proxy-config proxy.conf.json",
         "build": "ng build",
         "test": "echo \"Error: no test... minimal project\" && exit 1",
         "lint": "echo \"Error: no lint... minimal project\" && exit 1",
