Unify Python requirements install files

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,3 +3,67 @@ matplotlib
 Naked
 flask
 scikit-learn[alldeps]
+argh==0.26.2
+asn1crypto==0.24.0
+atomicwrites==1.1.5
+attrdict==2.0.0
+attrs==18.1.0
+bumpversion==0.5.3
+certifi==2018.8.13
+cffi==1.11.5
+chardet==3.0.4
+codacy-coverage==1.3.11
+coincurve==8.0.2
+coloredlogs==10.0
+coverage==4.5.1
+cryptography==2.3.1
+cytoolz==0.9.0.1
+eciespy==0.1.2
+eth-abi==1.1.1
+eth-account==0.3.0
+eth-hash==0.1.4
+eth-keyfile==0.5.1
+eth-keys==0.2.0b3
+eth-rlp==0.1.2
+eth-typing==1.1.0
+eth-utils==1.2.0
+flake8==3.5.0
+hexbytes==0.1.0
+humanfriendly==4.16.1
+idna==2.7
+keeper-contracts==0.1.1
+lru-dict==1.1.6
+mccabe==0.6.1
+more-itertools==4.3.0
+parsimonious==0.8.0
+pathtools==0.1.2
+pkginfo==1.4.2
+pluggy==0.7.1
+py==1.5.4
+py-solc==3.1.0
+pycodestyle==2.3.1
+pycparser==2.18
+pycryptodome==3.6.6
+pycryptodomex==3.6.6
+pyflakes==1.6.0
+PyJWT==1.6.4
+pyOpenSSL==18.0.0
+pysha3==1.0.2
+pytest==3.7.2
+pytest-runner==4.2
+PyYAML==3.13
+requests==2.19.1
+requests-toolbelt==0.8.0
+rlp==1.0.2
+semantic-version==2.6.0
+singletonify==0.1.2.0
+six==1.11.0
+toolz==0.9.0
+tox==3.2.1
+tqdm==4.25.0
+twine==1.11.0
+urllib3==1.23
+virtualenv==16.0.0
+watchdog==0.8.3
+web3==4.5.0
+websockets==5.0.1
