--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
         "core-js": "^2.4.1",
         "d3": "^4.13.0",
         "hammerjs": "^2.0.8",
+        "ipfs": "^0.32.3",
+        "orbit-db": "^0.19.9",
         "rxjs": "^5.4.1",
         "zone.js": "^0.8.14"
     },
