--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,8 @@
 {
     "name": "H2O",
-    "version": "0.2.0",
-    "author": "Outlier Ventures, Daniel Elsner",
+    "version": "0.9.2",
+    "author": "Outlier Ventures",
+    "license": "Apache-2.0",
     "scripts": {
         "ng": "ng",
         "start": "ng serve --host 0.0.0.0 --disableHostCheck true --proxy-config proxy.conf.json",
