Correct folder for run scripts on various components

--- a/backend/config_local.ini
+++ b/backend/config_local.ini
@@ -1,4 +1,4 @@
 [keeper-contracts]
-market.address = 0xdde2a33b8bad52ad18da7c4451b4b673e14aaee0
-auth.address = 0x602a0cf295504d27d669f4c4134532ac9e6b5993
-token.address = 0x6307481eb9a4dff8444be25125e7d15d9b8bb9a7
+market.address = 
+auth.address = 
+token.address = 
