--- a/backend/config_local.ini
+++ b/backend/config_local.ini
@@ -1,4 +1,4 @@
 [keeper-contracts]
-market.address = 
-auth.address = 
-token.address = 
+market.address = 0x7baccc0ea6a84b337e06c1648b0a7bb2165e0bca
+auth.address = 0xacad0f99ea7c116e07cf2caee02c20d488774285
+token.address = 0x0e8ee3bd558e08ac9582157b4bd89a20d49aa4ce
