--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-.DS_Store
+**/__pycache__
+**/node_modules
+**/.DS_Store
+/h2o/frontend/src/assets/images/after.png
+/h2o/frontend/src/assets/images/before.png
+/h2o/backend/config_local.ini
+/h2o/backend/config.json
+/h2o/backend/data.json
+/h2o/backend/host.json
+/h2o/backend/output.json
