Sibling containers, need access to contracts folder

--- a/h2o/Dockerfile
+++ b/h2o/Dockerfile
@@ -10,6 +10,7 @@ ARG DEBIAN_FRONTEND=noninteractive
 
 # Install required software
 
+# Core tools, python
 RUN apt-get update \
     && apt-get install -yq --no-install-recommends \
     git \
@@ -20,16 +21,25 @@ RUN apt-get update \
     python3-dev \
     python3-pip
 
+# For getting Ocean Protocol contract addresses from sibling container
+RUN curl -fsSL https://get.docker.com -o get-docker.sh \
+    && sh get-docker.sh \
+    && rm get-docker.sh
+
+# Node and npm
 RUN curl -sL https://deb.nodesource.com/setup_8.x | bash - \
     && apt-get install -yq --no-install-recommends nodejs
 
+# Yarn
 RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - \
     && echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list \
     && apt-get update \
     && apt-get install yarn
 
+# Angular
 RUN npm install -g @angular/cli
 
+# Python core tools
 RUN pip3 install --upgrade setuptools \
     && pip3 install wheel
 
@@ -42,8 +52,10 @@ WORKDIR /app
 # Install modules
 
 RUN cd backend \
-    && pip3 install -r requirements.txt \
-    && npm install
+    && pip3 install -r requirements.txt
+
+RUN cd backend \
+    && npm install orbit-db ipfs
 
 RUN cd frontend \
     && yarn install --pure-lockfile
@@ -52,8 +64,8 @@ RUN cd frontend \
 # Ports
 
 # Ocean
-# EXPOSE 8545
-# EXPOSE 5000
+#EXPOSE 8545
+#EXPOSE 5000
 
 # Backend
 EXPOSE 8081
