--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,14 @@
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
         "@swimlane/ngx-charts": "6.1.0",
+        "@types/node": "^10.12.9",
         "core-js": "^2.4.1",
         "d3": "^4.13.0",
         "hammerjs": "^2.0.8",
+        "ipfs": "^0.33.1",
+        "orbit-db": "^0.19.9",
         "rxjs": "^5.4.1",
+        "setimmediate": "^1.0.5",
         "zone.js": "^0.8.14"
     },
     "devDependencies": {
