--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 **/artifacts
 **/.DS_Store
 **/.vscode
-/h2o/frontend/src/assets/images/after.png
-/h2o/frontend/src/assets/images/before.png
+**/orbitdb
+/frontend/src/assets/images/after.png
+/frontend/src/assets/images/before.png
 /h2o/backend/config_local.ini
 /h2o/backend/config.json
 /h2o/backend/data.json
