--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@
 **/orbitdb
 /frontend/src/assets/images/after.png
 /frontend/src/assets/images/before.png
-/h2o/backend/config_local.ini
-/h2o/backend/config.json
-/h2o/backend/data.json
-/h2o/backend/host.json
-/h2o/backend/output.json
+/backend/config_local.ini
+/backend/config.json
+/backend/data.json
+/backend/host.json
+/backend/output.json
