Update Squid to Trilobite 0.2.14 (contracts 0.5)

--- a/backend/config_local.ini
+++ b/backend/config_local.ini
@@ -1,12 +1,14 @@
 [keeper-contracts]
-keeper.url = http://127.0.0.1:8545
+keeper.url = http://localhost:8545
 keeper.path = artifacts
 
-secret_store.url = http://localhost:8010
-parity.url = http://localhost:9545
-parity.address = 0x594d9f933f4f2df6bb66bb34e7ff9d27acc1c019
-parity.password = password
+secret_store.url = http://localhost:12001
+parity.url = http://localhost:8545
+parity.address = 0xdaa5db2559470ccc76a3a2b6e037bbe2354d9359
+parity.password = Privacy!
 
+parity.address1 = 0xdaa5db2559470ccc76a3a2b6e037bbe2354d9359
+parity.password1 = Privacy!
 
 [resources]
 azure.account.name = testocnfiles
@@ -22,3 +24,4 @@ aquarius.url = http://localhost:5000
 brizo.url = http://localhost:8030
 
 storage.path = squid_py.db
+downloads.path = consume-downloads
