--- a/backend/config.ini
+++ b/backend/config.ini
@@ -1,12 +1,14 @@
 [keeper-contracts]
-keeper.url = http://127.0.0.1:8545
+keeper.url = http://localhost:8545
 keeper.path = artifacts
 
-secret_store.url = http://localhost:8010
-parity.url = http://localhost:9545
-parity.address = 0x594d9f933f4f2df6bb66bb34e7ff9d27acc1c019
-parity.password = password
+secret_store.url = http://localhost:12001
+parity.url = http://localhost:8545
+parity.address = 0x00bd138abd70e2f00903268f3db08f2d25677c9e
+parity.password = node0
 
+parity.address1 = 0x068ed00cf0441e4829d9784fcbe7b9e26d4bd8d0
+parity.password1 = secret
 
 [resources]
 azure.account.name = testocnfiles
@@ -22,3 +24,4 @@ aquarius.url = http://localhost:5000
 brizo.url = http://localhost:8030
 
 storage.path = squid_py.db
+downloads.path = consume-downloads
